--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.13",
+    "@types/react-speech-recognition": "^3.9.2",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-speech-recognition": "^3.10.0",
     "sass": "^1.69.3"
   },
   "devDependencies": {
