--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.14.13",
     "@types/react-speech-recognition": "^3.9.2",
     "next": "13.5.4",
+    "openai": "^4.12.1",
     "react": "^18",
     "react-dom": "^18",
     "react-speech-recognition": "^3.10.0",
